--- a/.eslintrc
+++ b/.eslintrc
@@ -24,11 +24,13 @@ rules:
   arrow-parens: 0
   class-methods-use-this: 0
   func-names: 0
-  indent: 2
+  indent: [2, 4]
   new-cap: 0
   no-plusplus: 0
   no-return-assign: 0
+  no-underscore-dangle: 0
   quote-props: 0
+  semi: [2, "never"]
   template-curly-spacing: [2, "always"]
   comma-dangle: ["error", {
     "arrays": "always-multiline",
@@ -42,6 +44,7 @@ rules:
   react/jsx-curly-spacing: [2, "always"]
   react/jsx-filename-extension: 0
   react/jsx-boolean-value: 0
+  react/jsx-indent: [2, 4]
   react/prefer-stateless-function: 0
   import/extensions: 0
   import/no-extraneous-dependencies: 0
