--- a/.babelrc
+++ b/.babelrc
@@ -2,10 +2,17 @@
   "plugins": [
     "transform-class-properties",
     "syntax-decorators",
-    "transform-decorators-legacy"
+    "transform-decorators-legacy",
+    ["transform-runtime", {
+      "polyfill": false,
+      "regenerator": true
+    }]
+  ],
+  "ignore": [
+      "lib/**/*.js",
   ],
   "presets": [
-    ["es2015", { "modules": false }],
+    "es2015",
     "react",
     "stage-0"
   ],
