--- a/package.json
+++ b/package.json
@@ -3,10 +3,17 @@
   "version": "0.0.1",
   "private": false,
   "license": "MIT",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "bin": {
+    "gutsy": "lib/index.js"
+  },
   "scripts": {
-    "start": "webpack --progress --colors --watch",
-    "build": "rm -rf ./build && NODE_ENV=\"production\" webpack --progress --colors",
+    "watch": "concurrently --kill-others \"npm run watch:exec\" \"npm run watch:injected\"",
+    "watch:exec": "babel exec --watch --out-dir lib",
+    "watch:injected": "webpack --progress --colors --watch",
+    "build": "rm -rf ./build && NODE_ENV=\"production\" && build:exec && build:injected",
+    "build:exec": "babel exec/index.js --out-file lib/index.js",
+    "build:injected": "webpack --progress --colors",
     "lint-break-on-errors": "eslint ./source/js ./webpack.config.js -f table --ext .js --ext .jsx",
     "lint": "eslint ./source/js ./webpack.config.js -f table --ext .js --ext .jsx || true",
     "preview": "NODE_ENV=\"production\" webpack-dashboard -t 'Preview Mode - React-Redux Boilerplate' -- webpack-dev-server",
@@ -21,12 +28,13 @@
     "babel-plugin-syntax-decorators": "^6.13.0",
     "babel-plugin-transform-class-properties": "^6.6.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.6.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
     "babel-runtime": "^6.6.1",
+    "concurrently": "^3.4.0",
     "css-loader": "0.14.5",
     "eslint": "^3.10.1",
     "eslint-config-airbnb": "^13.0.0",
@@ -48,9 +56,13 @@
     "webpack-dev-server": "^2.2.1"
   },
   "dependencies": {
-    "babel-polyfill": "^6.16.0",
+    "babel-cli": "^6.24.1",
+    "babel-polyfill": "^6.23.0",
+    "babel-runtime": "^6.23.0",
     "bluebird": "^3.5.0",
+    "commander": "^2.9.0",
     "es6-promise": "^3.1.2",
+    "fs": "0.0.1-security",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
