--- a/package.json
+++ b/package.json
@@ -44,11 +44,11 @@
     "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.24.1",
-    "node-sass": "^3.13.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
     "postcss-loader": "^1.1.1",
     "prepush": "^3.1.11",
     "redux-logger": "^2.7.4",
-    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
@@ -61,18 +61,10 @@
     "babel-runtime": "^6.23.0",
     "bluebird": "^3.5.0",
     "commander": "^2.9.0",
-    "es6-promise": "^3.1.2",
-    "fs": "0.0.1-security",
-    "immutable": "^3.8.1",
-    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "nightmare": "^2.10.0",
     "react": "^15.4.0",
-    "react-dom": "^15.4.0",
-    "react-redux": "^4.4.0",
-    "react-router": "^3.0.0",
-    "redux": "^3.3.1",
-    "redux-thunk": "^2.0.1"
+    "react-dom": "^15.4.0"
   },
   "description": "Generate react component fixtures and unit tests automatically",
   "repository": {
