--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "watch": "concurrently --kill-others \"npm run watch:exec\" \"npm run watch:injected\"",
     "watch:exec": "babel exec --watch --out-dir lib",
     "watch:injected": "webpack --progress --colors --watch",
-    "build": "rm -rf ./build && NODE_ENV=\"production\" && build:exec && build:injected",
+    "build": "rm -rf ./build && NODE_ENV=\"production\" && npm run build:exec && npm run build:injected",
     "build:exec": "babel exec/index.js --out-file lib/index.js",
     "build:injected": "webpack --progress --colors",
     "lint-break-on-errors": "eslint ./source/js ./webpack.config.js -f table --ext .js --ext .jsx",
@@ -35,13 +35,13 @@
     "babel-preset-stage-0": "^6.16.0",
     "babel-runtime": "^6.6.1",
     "concurrently": "^3.4.0",
-    "css-loader": "0.14.5",
+    "css-loader": "^0.23.1",
     "eslint": "^3.10.1",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.7.1",
-    "extract-text-webpack-plugin": "^2.0.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.24.1",
     "less": "^2.7.2",
@@ -51,20 +51,28 @@
     "redux-logger": "^2.7.4",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
-    "webpack": "^2.2.1",
+    "webpack": "^2.4.1",
+    "webpack-combine-loaders": "^2.0.3",
+    "webpack-config-utils": "^2.3.0",
     "webpack-dashboard": "^0.2.0",
     "webpack-dev-server": "^2.2.1"
   },
   "dependencies": {
     "babel-cli": "^6.24.1",
+    "babel-plugin-react-css-modules": "^2.6.1",
     "babel-polyfill": "^6.23.0",
     "babel-runtime": "^6.23.0",
     "bluebird": "^3.5.0",
     "commander": "^2.9.0",
+    "extract-text-webpack-plugin": "^1.0.1",
     "lodash": "^4.17.4",
+    "lodash.map": "^4.6.0",
+    "mobx": "^3.1.9",
+    "mobx-react": "^4.1.8",
     "nightmare": "^2.10.0",
     "react": "^15.4.0",
-    "react-dom": "^15.4.0"
+    "react-dom": "^15.4.0",
+    "webpack": "^1.12.14"
   },
   "description": "Generate react component fixtures and unit tests automatically",
   "repository": {
