--- a/.eslintrc
+++ b/.eslintrc
@@ -26,9 +26,11 @@ rules:
   func-names: 0
   indent: [2, 4]
   new-cap: 0
+  no-param-reassign: 0
   no-plusplus: 0
   no-return-assign: 0
   no-underscore-dangle: 0
+  no-use-before-define: 0
   quote-props: 0
   semi: [2, "never"]
   template-curly-spacing: [2, "always"]
@@ -45,8 +47,11 @@ rules:
   react/jsx-filename-extension: 0
   react/jsx-boolean-value: 0
   react/jsx-indent: [2, 4]
+  react/jsx-indent-props: [2, 4]
   react/prefer-stateless-function: 0
   import/extensions: 0
   import/no-extraneous-dependencies: 0
   import/no-unresolved: 0
   import/prefer-default-export: 0
+  jsx-a11y/no-static-element-interactions: 0
+  jsx-a11y/label-has-for: 0
