--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "babel-core": "^6.7.2",
     "babel-eslint": "^7.1.0",
     "babel-loader": "^6.2.4",
+    "babel-plugin-inferno": "^3.2.0",
     "babel-plugin-syntax-decorators": "^6.13.0",
+    "babel-plugin-transform-async-to-module-method": "^6.24.1",
     "babel-plugin-transform-class-properties": "^6.6.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
@@ -58,6 +60,7 @@
     "webpack-dev-server": "^2.2.1"
   },
   "dependencies": {
+    "aphrodite": "^1.2.0",
     "babel-cli": "^6.24.1",
     "babel-plugin-react-css-modules": "^2.6.1",
     "babel-polyfill": "^6.23.0",
@@ -70,8 +73,11 @@
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "nightmare": "^2.10.0",
+    "preact": "^8.1.0",
     "react": "^15.4.0",
+    "react-checkbox-tree": "^0.5.1",
     "react-dom": "^15.4.0",
+    "react-tree-menu": "^1.5.0",
     "webpack": "^1.12.14"
   },
   "description": "Generate react component fixtures and unit tests automatically",
