--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "extract-text-webpack-plugin": "^1.0.1",
     "lodash": "^4.17.4",
     "lodash.map": "^4.6.0",
+    "mkdirp": "^0.5.1",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "nightmare": "^2.10.0",
@@ -78,6 +79,7 @@
     "react-checkbox-tree": "^0.5.1",
     "react-dom": "^15.4.0",
     "react-tree-menu": "^1.5.0",
+    "safe-write-file": "^1.1.2",
     "webpack": "^1.12.14"
   },
   "description": "Generate react component fixtures and unit tests automatically",
