--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "marmite",
+  "name": "pomello",
   "version": "0.0.1",
   "private": false,
   "license": "MIT",
   "main": "lib/index.js",
   "bin": {
-    "marmite": "lib/index.js"
+    "pomello": "lib/index.js"
   },
   "scripts": {
     "watch": "concurrently --kill-others \"npm run watch:exec\" \"npm run watch:injected\"",
@@ -17,19 +17,15 @@
     "lint": "eslint ./source/js ./webpack.config.js -f table --ext .js --ext .jsx || true"
   },
   "devDependencies": {
-    "autoprefixer": "^6.5.3",
     "babel-core": "^6.7.2",
     "babel-eslint": "^7.1.0",
     "babel-loader": "^6.2.4",
-    "babel-plugin-inferno": "^3.2.0",
     "babel-plugin-syntax-decorators": "^6.13.0",
     "babel-plugin-transform-async-to-module-method": "^6.24.1",
     "babel-plugin-transform-class-properties": "^6.6.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.5.0",
-    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.16.0",
     "babel-runtime": "^6.6.1",
     "concurrently": "^3.4.0",
@@ -39,49 +35,30 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.7.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.24.1",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.3",
-    "postcss-loader": "^1.1.1",
-    "prepush": "^3.1.11",
-    "redux-logger": "^2.7.4",
+    "extract-text-webpack-plugin": "^1.0.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
-    "webpack": "^2.4.1",
-    "webpack-combine-loaders": "^2.0.3",
-    "webpack-config-utils": "^2.3.0",
-    "webpack-dashboard": "^0.2.0",
-    "webpack-dev-server": "^2.2.1"
+    "webpack": "^1.12.14"
   },
   "dependencies": {
     "aphrodite": "^1.2.0",
     "babel-cli": "^6.24.1",
-    "babel-plugin-react-css-modules": "^2.6.1",
     "babel-polyfill": "^6.23.0",
-    "babel-runtime": "^6.23.0",
     "bluebird": "^3.5.0",
     "commander": "^2.9.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "lodash": "^4.17.4",
     "lodash.map": "^4.6.0",
     "mkdirp": "^0.5.1",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
     "nightmare": "^2.10.0",
-    "preact": "^8.1.0",
     "react": "^15.4.0",
-    "react-checkbox-tree": "^0.5.1",
     "react-dom": "^15.4.0",
-    "react-tree-menu": "^1.5.0",
     "safe-write-file": "^1.1.2",
-    "webpack": "^1.12.14"
   },
   "description": "Generate react component fixtures and unit tests automagically",
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/cannoneyed/marmite.git"
+    "url": "git+ssh://git@github.com/cannoneyed/pomello.git"
   },
   "keywords": [
     "react",
@@ -91,7 +68,7 @@
   ],
   "author": "cannoneyed",
   "bugs": {
-    "url": "https://github.com/cannoneyed/marmite/issues"
+    "url": "https://github.com/cannoneyed/pomello/issues"
   },
-  "homepage": "https://github.com/cannoneyed/marmite#readme",
+  "homepage": "https://github.com/cannoneyed/pomello#readme",
 }
