--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "babel-polyfill": "^6.23.0",
     "bluebird": "^3.5.0",
     "commander": "^2.9.0",
-    "lodash.map": "^4.6.0",
+    "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
